--- a/Delator_api/package.json
+++ b/Delator_api/package.json
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "pg": "^8.7.3",
+    "mongoose": "^6.4.1",
     "yup": "^0.32.11"
   }
 }
