--- a/Delator_api/package.json
+++ b/Delator_api/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "delator_api",
+  "name": "delator",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --build",
+    "tsc": "tsc --watch",
+    "nodemon": "nodemon ./build/index"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.4.1",
-    "yup": "^0.32.11"
+    "mongoose": "^6.4.4",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   }
 }
