--- a/Delator_api/package.json
+++ b/Delator_api/package.json
@@ -19,6 +19,7 @@
     "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
+    "nodemailer": "^6.7.7",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4",
     "yup": "^0.32.11"
@@ -31,6 +32,7 @@
     "@types/generate-password": "^1.5.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^18.0.3"
+    "@types/node": "^18.0.3",
+    "@types/nodemailer": "^6.4.4"
   }
 }
